# spacetraders

./: .gitlab-ci.yml  .travis.yml  README.md  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  tox.ini  update.sh
.openapi-generator/: FILES
contracts/: __init__.py  controller.py
docs/: AcceptContract200Response.md  AcceptContract200ResponseData.md  Agent.md  AgentsApi.md  Chart.md  Construction.md  ConstructionMaterial.md  Contract.md  ContractDeliverGood.md  ContractPayment.md  ContractTerms.md  ContractsApi.md  Cooldown.md  CreateChart201Response.md  CreateChart201ResponseData.md  CreateShipShipScan201Response.md  CreateShipShipScan201ResponseData.md  CreateShipSystemScan201Response.md  CreateShipSystemScan201ResponseData.md  CreateShipWaypointScan201Response.md  CreateShipWaypointScan201ResponseData.md  CreateSurvey201Response.md  CreateSurvey201ResponseData.md  DefaultApi.md  DeliverContract200Response.md  DeliverContract200ResponseData.md  DeliverContractRequest.md  DockShip200Response.md  ExtractResources201Response.md  ExtractResources201ResponseData.md  ExtractResourcesRequest.md  Extraction.md  ExtractionYield.md  Faction.md  FactionTrait.md  FactionsApi.md  FleetApi.md  FulfillContract200Response.md  GetAgents200Response.md  GetConstruction200Response.md  (+125 more)
my_agent/: __init__.py
spacetraders/: README.md
spacetraders-client/: README.md  __init__.py  api_client.py  configuration.py  pyproject.toml  rest.py  setup.py
test/: test_accept_contract200_response.py  test_accept_contract200_response_data.py  test_activity_level.py  test_agent.py  (+169 more)
(+935 files in other folders)
