[tool.poetry]
name = "spacetraders-client"
version = "0.1.0"
description = "Python Client for Space Traders"
authors = ["Drew Brown <drew@drewburr.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
spacetraders = {path = "../python-spacetraders"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
ruff = "<0.2.0"

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
